Add 7 fold scheme and full fold scheme.

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -1,258 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>event</th>\n",
-       "      <th>series_id</th>\n",
-       "      <th>night</th>\n",
-       "      <th>onset</th>\n",
-       "      <th>wakeup</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1250</th>\n",
-       "      <td>29d3469bd15d</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3960.0</td>\n",
-       "      <td>10164.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1251</th>\n",
-       "      <td>29d3469bd15d</td>\n",
-       "      <td>2</td>\n",
-       "      <td>21996.0</td>\n",
-       "      <td>27132.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1252</th>\n",
-       "      <td>29d3469bd15d</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1253</th>\n",
-       "      <td>29d3469bd15d</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1254</th>\n",
-       "      <td>29d3469bd15d</td>\n",
-       "      <td>5</td>\n",
-       "      <td>73212.0</td>\n",
-       "      <td>79368.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1255</th>\n",
-       "      <td>29d3469bd15d</td>\n",
-       "      <td>6</td>\n",
-       "      <td>90672.0</td>\n",
-       "      <td>96612.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1256</th>\n",
-       "      <td>29d3469bd15d</td>\n",
-       "      <td>7</td>\n",
-       "      <td>107820.0</td>\n",
-       "      <td>113712.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1257</th>\n",
-       "      <td>29d3469bd15d</td>\n",
-       "      <td>8</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1258</th>\n",
-       "      <td>29d3469bd15d</td>\n",
-       "      <td>9</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1259</th>\n",
-       "      <td>29d3469bd15d</td>\n",
-       "      <td>10</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1260</th>\n",
-       "      <td>29d3469bd15d</td>\n",
-       "      <td>11</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1261</th>\n",
-       "      <td>29d3469bd15d</td>\n",
-       "      <td>12</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1262</th>\n",
-       "      <td>29d3469bd15d</td>\n",
-       "      <td>13</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1263</th>\n",
-       "      <td>29d3469bd15d</td>\n",
-       "      <td>14</td>\n",
-       "      <td>229224.0</td>\n",
-       "      <td>235152.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1264</th>\n",
-       "      <td>29d3469bd15d</td>\n",
-       "      <td>15</td>\n",
-       "      <td>246576.0</td>\n",
-       "      <td>252852.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1265</th>\n",
-       "      <td>29d3469bd15d</td>\n",
-       "      <td>16</td>\n",
-       "      <td>264456.0</td>\n",
-       "      <td>271212.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1266</th>\n",
-       "      <td>29d3469bd15d</td>\n",
-       "      <td>17</td>\n",
-       "      <td>281412.0</td>\n",
-       "      <td>286872.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1267</th>\n",
-       "      <td>29d3469bd15d</td>\n",
-       "      <td>18</td>\n",
-       "      <td>298212.0</td>\n",
-       "      <td>304056.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1268</th>\n",
-       "      <td>29d3469bd15d</td>\n",
-       "      <td>19</td>\n",
-       "      <td>315444.0</td>\n",
-       "      <td>321156.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1269</th>\n",
-       "      <td>29d3469bd15d</td>\n",
-       "      <td>20</td>\n",
-       "      <td>332676.0</td>\n",
-       "      <td>338436.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1270</th>\n",
-       "      <td>29d3469bd15d</td>\n",
-       "      <td>21</td>\n",
-       "      <td>350232.0</td>\n",
-       "      <td>355944.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1271</th>\n",
-       "      <td>29d3469bd15d</td>\n",
-       "      <td>22</td>\n",
-       "      <td>367020.0</td>\n",
-       "      <td>373404.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1272</th>\n",
-       "      <td>29d3469bd15d</td>\n",
-       "      <td>23</td>\n",
-       "      <td>384372.0</td>\n",
-       "      <td>390852.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "event     series_id  night     onset    wakeup\n",
-       "1250   29d3469bd15d      1    3960.0   10164.0\n",
-       "1251   29d3469bd15d      2   21996.0   27132.0\n",
-       "1252   29d3469bd15d      3       NaN       NaN\n",
-       "1253   29d3469bd15d      4       NaN       NaN\n",
-       "1254   29d3469bd15d      5   73212.0   79368.0\n",
-       "1255   29d3469bd15d      6   90672.0   96612.0\n",
-       "1256   29d3469bd15d      7  107820.0  113712.0\n",
-       "1257   29d3469bd15d      8       NaN       NaN\n",
-       "1258   29d3469bd15d      9       NaN       NaN\n",
-       "1259   29d3469bd15d     10       NaN       NaN\n",
-       "1260   29d3469bd15d     11       NaN       NaN\n",
-       "1261   29d3469bd15d     12       NaN       NaN\n",
-       "1262   29d3469bd15d     13       NaN       NaN\n",
-       "1263   29d3469bd15d     14  229224.0  235152.0\n",
-       "1264   29d3469bd15d     15  246576.0  252852.0\n",
-       "1265   29d3469bd15d     16  264456.0  271212.0\n",
-       "1266   29d3469bd15d     17  281412.0  286872.0\n",
-       "1267   29d3469bd15d     18  298212.0  304056.0\n",
-       "1268   29d3469bd15d     19  315444.0  321156.0\n",
-       "1269   29d3469bd15d     20  332676.0  338436.0\n",
-       "1270   29d3469bd15d     21  350232.0  355944.0\n",
-       "1271   29d3469bd15d     22  367020.0  373404.0\n",
-       "1272   29d3469bd15d     23  384372.0  390852.0"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "event_df = pd.read_csv(\"../data/child-mind-institute-detect-sleep-states/train_events.csv\")\n",
-    "\n",
-    "event_df = (\n",
-    "    event_df.pivot(index=[\"series_id\", \"night\"], columns=\"event\", values=\"step\")\n",
-    "    # .dropna()\n",
-    "    .reset_index()\n",
-    ")\n",
-    "\n",
-    "event_df[event_df[\"series_id\"] == \"29d3469bd15d\"]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Ideas\n",
     "\n",
-    "- try ensemble of all folds with cutmix \n",
-    "- check fixed sampling \n",
     "\n",
     "- try with full data\n",
-    "- try with 6, 7, 8 folds\n",
+    "- try with 7 folds\n",
     "\n",
     "- try again gaussian loss\n",
     "- fix DETR\n",
