Return power averaging

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -6,30 +6,24 @@
    "source": [
     "# Ideas\n",
     "\n",
-    "- add full data\n",
-    "\n",
-    "- average models by N epochs with the best loss\n",
+    "- submit full \n",
+    "- submit 7-fold with power averaging\n",
+    "- submit 7 fold with different th and dist\n",
     "- fix DETR\n",
-    "- simplify transformer\n",
     "\n",
-    "What works and gives boost but overfits:\n",
-    "- LSTM encoder (0.772/~0.722)\n",
-    "- resnet50 (0.780/0.722)\n",
-    "- duration 17280 (0.772/0.722)\n",
-    "- cutmix 0.5\n",
-    "Train all of it on the full dataset and submit"
+    "- simplify transformer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2329856/3881776336.py:41: UserWarning: \n",
+      "/tmp/ipykernel_2348962/2346142569.py:41: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -60,7 +54,7 @@
     "plt.style.use(\"ggplot\")\n",
     "\n",
     "INFERENCE = False\n",
-    "EXP_NAME = \"transformer_folds_5\"\n",
+    "EXP_NAME = \"transformer_folds_7\"\n",
     "RUN_NAME = \"run0\"\n",
     "TYPE = \"score\"\n",
     "\n",
@@ -68,7 +62,7 @@
     "    RESULT_DIR = Path(\"../output/inference\") / EXP_NAME  # / RUN_NAME\n",
     "    hydra_result_dir = Path(\"../output/train\") / \"transformer_folds_5\" / RUN_NAME\n",
     "else:\n",
-    "    RESULT_DIR = Path(\"../output/train\") / EXP_NAME / RUN_NAME\n",
+    "    RESULT_DIR = Path(\"../output/train\") / EXP_NAME\n",
     "    hydra_result_dir = Path(\"../output/train\") / EXP_NAME / RUN_NAME\n",
     "\n",
     "\n",
@@ -91,12 +85,23 @@
     "    preds = np.load(RESULT_DIR / f\"preds.npy\")\n",
     "    keys = np.load(RESULT_DIR / f\"keys.npy\")\n",
     "else:\n",
-    "    preds = np.load(RESULT_DIR / f\"preds_{TYPE}.npy\")\n",
-    "    labels = np.load(RESULT_DIR / f\"labels_{TYPE}.npy\")\n",
-    "    keys = np.load(RESULT_DIR / \"keys.npy\")\n",
+    "    preds, labels, keys = None, None, None\n",
+    "    for i in range(7):\n",
+    "        tmp_preds = np.load(RESULT_DIR / f\"run{i}\" / f\"preds_{TYPE}.npy\")\n",
+    "        tmp_labels = np.load(RESULT_DIR / f\"run{i}\" / f\"labels_{TYPE}.npy\")\n",
+    "        tmp_keys = np.load(RESULT_DIR / f\"run{i}\" / \"keys.npy\")\n",
     "\n",
-    "gt_df = pd.read_csv(Path(cfg.dir.data_dir) / \"train_events.csv\")\n",
-    "gt_df = gt_df[gt_df[\"series_id\"].isin(cfg.split.valid_series_ids)].dropna().reset_index(drop=True)"
+    "        if preds is None:\n",
+    "            preds = tmp_preds\n",
+    "            labels = tmp_labels\n",
+    "            keys = tmp_keys\n",
+    "        else:\n",
+    "            preds = np.concatenate((preds, tmp_preds))\n",
+    "            labels = np.concatenate((labels, tmp_labels))\n",
+    "            keys = np.concatenate((keys, tmp_keys))\n",
+    "\n",
+    "gt_df = pd.read_csv(Path(cfg.dir.data_dir) / \"train_events.csv\").dropna().reset_index(drop=True)\n",
+    "# gt_df = gt_df[gt_df[\"series_id\"].isin(cfg.split.valid_series_ids)]"
    ]
   },
   {
@@ -108,16 +113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7672187043316925, 57065)"
+       "(0.7622137758555847, 133851)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,21 +370,21 @@
     "    sub_df = pd.DataFrame(records).sort_values([\"series_id\", \"step\"]).reset_index(drop=True)\n",
     "    sub_df[\"row_id\"] = np.arange(len(sub_df))\n",
     "\n",
-    "    # # delete onset and wakeup events that are too far from the same events with high score\n",
-    "    # high_score_event_threshold = 17280 * 1.01  # 24 hours\n",
-    "    # sub_df = clean_weak_events(sub_df, high_score_event_threshold)\n",
+    "    # delete onset and wakeup events that are too far from the same events with high score\n",
+    "    high_score_event_threshold = 17280 * 1.01  # 24 hours\n",
+    "    sub_df = clean_weak_events(sub_df, high_score_event_threshold)\n",
     "\n",
-    "    # # delete onset and wakeup events that are too far from next wakeup / previous onset event\n",
-    "    # event_threshold = 14400  # 20 hours\n",
-    "    # sub_df = clean_too_far_events(sub_df, event_threshold)\n",
+    "    # delete onset and wakeup events that are too far from next wakeup / previous onset event\n",
+    "    event_threshold = 14400  # 20 hours\n",
+    "    sub_df = clean_too_far_events(sub_df, event_threshold)\n",
     "\n",
-    "    # # detect alone onset event that are between two other onset events and delete them\n",
-    "    # alone_threshold = 2880 # 2 hours\n",
-    "    # sub_df = delete_alone_events(sub_df, alone_threshold)\n",
+    "    # detect alone onset event that are between two other onset events and delete them\n",
+    "    alone_threshold = 2880  # 2 hours\n",
+    "    sub_df = delete_alone_events(sub_df, alone_threshold)\n",
     "\n",
-    "    # # delete events that are among many different events\n",
-    "    # close_threshold = 360 # 30 minutes\n",
-    "    # sub_df = delete_events_among_differnet_evnets(sub_df, close_threshold)\n",
+    "    # delete events that are among many different events\n",
+    "    close_threshold = 360  # 30 minutes\n",
+    "    sub_df = delete_events_among_differnet_evnets(sub_df, close_threshold)\n",
     "\n",
     "    sub_df = sub_df[[\"row_id\", \"series_id\", \"step\", \"event\", \"score\"]]\n",
     "\n",
@@ -389,7 +394,7 @@
     "with open(Path(cfg.dir.processed_dir) / \"train\" / \"series_lens.json\") as f:\n",
     "    series_lens = json.load(f)\n",
     "\n",
-    "pred_df = post_process_for_seg(keys, preds, series_lens, score_th=0.0001, distance=70, offset=8)\n",
+    "pred_df = post_process_for_seg(keys, preds, series_lens, score_th=0.0005, distance=90, offset=8)\n",
     "# pred_df = pred_df.to_pandas()\n",
     "\n",
     "score = event_detection_ap(gt_df, pred_df)\n",
