Return classic averaging

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -6,17 +6,17 @@
    "source": [
     "# Ideas\n",
     "\n",
-    "- submit full \n",
-    "- submit 7-fold with power averaging\n",
-    "- submit 7 fold with different th and dist\n",
-    "- fix DETR\n",
+    "- submit 7 folds with different th and dist\n",
+    "- simplify transformer if it works - add it to the stage below\n",
+    "- try also increased twice duration with decreased twice epochs + decrease wd to 1e-5\n",
     "\n",
-    "- simplify transformer"
+    "- try again your postprocessing improvements with fold scheme, maybe this time it will work\n",
+    "- fix DETR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -113,16 +113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7622137758555847, 133851)"
+       "(0.7605417893943462, 400606)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,14 +408,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fold 5_0 - 0.765 / 0.733 - rank 1\n",
-    "# fold 5_3 - 0.772 / 0.733 - rank 3\n",
-    "\n",
-    "# fold 10_2 - 0.0001 / 85 / 0.811 / 0.729 (0.709 for the best loss) - rank 6\n",
-    "# fold 10_4 - 0.0001 / 70 / 0.789 / 0.734 - rank 2\n",
-    "# fold 10_6 - 0.0001 / 70 / 0.779 / 0.733 - rank 4\n",
-    "# fold 10_7 - 0.0001 / 80 / 0.792 / 0.729 - rank 5\n",
-    "# fold 10_9 - 0.0001 / 80 / 0.812 / 0.722"
+    "# 0.7622137758555847, 133851 - 7 folds, score_th=0.0005, distance=90"
    ]
   },
   {
