Return all upgrades of postprocessing

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -8,22 +8,22 @@
     "\n",
     "- submit 7 folds with different th and dist\n",
     "- simplify transformer if it works - add it to the stage below\n",
-    "- try also increased twice duration with decreased twice epochs + decrease wd to 1e-5\n",
+    "- try increased twice duration with decreased twice epochs + decrease wd to 1e-5\n",
     "\n",
-    "- try again your postprocessing improvements with fold scheme, maybe this time it will work\n",
+    "- try again your postprocessing improvements with 7-fold scheme, maybe this time it will work\n",
     "- fix DETR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2348962/2346142569.py:41: UserWarning: \n",
+      "/tmp/ipykernel_2632110/3308245386.py:41: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -54,7 +54,7 @@
     "plt.style.use(\"ggplot\")\n",
     "\n",
     "INFERENCE = False\n",
-    "EXP_NAME = \"transformer_folds_7\"\n",
+    "EXP_NAME = \"transformer_folds_10\"\n",
     "RUN_NAME = \"run0\"\n",
     "TYPE = \"score\"\n",
     "\n",
@@ -86,10 +86,16 @@
     "    keys = np.load(RESULT_DIR / f\"keys.npy\")\n",
     "else:\n",
     "    preds, labels, keys = None, None, None\n",
-    "    for i in range(7):\n",
+    "    for i in range(10):\n",
     "        tmp_preds = np.load(RESULT_DIR / f\"run{i}\" / f\"preds_{TYPE}.npy\")\n",
     "        tmp_labels = np.load(RESULT_DIR / f\"run{i}\" / f\"labels_{TYPE}.npy\")\n",
     "        tmp_keys = np.load(RESULT_DIR / f\"run{i}\" / \"keys.npy\")\n",
+    "\n",
+    "        if tmp_preds.shape[2] == 3:\n",
+    "            tmp_preds = tmp_preds[:, :, [1, 2]]\n",
+    "\n",
+    "        if tmp_labels.shape[2] == 3:\n",
+    "            tmp_labels = tmp_labels[:, :, [1, 2]]\n",
     "\n",
     "        if preds is None:\n",
     "            preds = tmp_preds\n",
@@ -113,16 +119,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7605417893943462, 400606)"
+       "(0.7625164054066758, 133717)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
