Delete of postprocessing upgrades

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -6,11 +6,11 @@
    "source": [
     "# Ideas\n",
     "\n",
-    "- submit 7 folds with different th and dist\n",
+    "- add 3 folds scheme\n",
+    "\n",
     "- simplify transformer if it works - add it to the stage below\n",
     "- try increased twice duration with decreased twice epochs + decrease wd to 1e-5\n",
     "\n",
-    "- try again your postprocessing improvements with 7-fold scheme, maybe this time it will work\n",
     "- fix DETR"
    ]
   },
